  - abelian_group_count/1 - Number of Abelian groups of order `n`
  - p_adic_valuation/2 - The _p-adic_ valuation function (for prime `p` and integer `n`)
  - rooted_tree_count/1 - Rooted trees of N nodes
  - is_of_form_mx_plus_b/3 - Does number have form `mx + b` for strict values of `m` and `b`?
  - divisors_of_form_mx_plus_b/3 - Find divisors of `n` that are of form `mx + b`
  - hurwitz_radon_number - find the hurwitz-radon number of `n`
  
  
### New Sequences

   - A000001 - Number of groups of order n
   - A000043 - Mersenne exponents: primes p such that 2^p - 1 is prime.
   - A000105 - Number of free polyominoes (or square animals) with n cells
   - A000109 - Number of simplicial polyhedra with n nodes
   - A000112 - Number of partially ordered sets ("posets") with n unlabeled elements
   - A000609 - Number of threshold functions of n or fewer variables
   - A000798 - Number of different quasi-orders (or topologies, or transitive digraphs) with n labeled elements
   - A002106 - Number of transitive permutation groups of degree n
   - A003094 - Number of unlabeled connected planar simple graphs with n nodes
   - A005470 - Number of unlabeled planar simple graphs with n nodes
   - A006966 - Number of lattices on n unlabeled nodes
   - A055512 - Lattices with n labeled elements
   - updated A000041 - Partitions of `n` is now calculated, instead of list based
    

## v0.10.0

```
OEIS Coverage
        144 total sequences
By Module
        Elixir.Chunky.Sequence.OEIS - 3 sequences
        Elixir.Chunky.Sequence.OEIS.Core - 24 sequences
        Elixir.Chunky.Sequence.OEIS.Factors - 96 sequences
        Elixir.Chunky.Sequence.OEIS.Primes - 1 sequences
        Elixir.Chunky.Sequence.OEIS.Sigma - 20 sequences
Sequence Groups
        OEIS Core Sequences - 25 / 177 (14.12%)
```

### Enhancements

 - Chunky.Math
  - jordan_totient/2 - Jordan totient `J-k(n)`
  - mobius_function/1 - Classical mobius function
  - omega/1 - Count of distinct prime factors